appview/pages/markup: add footnot support
Signed-off-by: oppiliappan <me@oppi.li>

--- a/input.css
+++ b/input.css
@@ -136,6 +136,8 @@
 
         .prose li:has(input) {
           list-style: none;
+        .prose a.footnote-backref {
+          @apply no-underline;
         }
 
         .prose li {
