*.html: format with prettier (again)
I guess it's not idempotent in some cases? Looks like it's happy with
these, though, as rerunning it after this commit produces no changes.

Hopefully this is a one time thing...

Signed-off-by: Winter <winter@winter.cafe>

--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -1,5 +1,6 @@
 {{ define "title" }}
-  {{ .Path }} at {{ .Ref }} &middot; {{ .RepoInfo.FullName }}
+  {{ .Path }} at {{ .Ref }} &middot;
+  {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "extrameta" }}
