--- a/appview/pages/templates/repo/fork.html
+++ b/appview/pages/templates/repo/fork.html
@@ -3,7 +3,8 @@
 {{ define "content" }}
   <div class="p-6">
     <p class="text-xl font-bold dark:text-white">
-      Fork {{ .RepoInfo.FullName }}
+      Fork
+      {{ .RepoInfo.FullName }}
     </p>
   </div>
   <div class="p-6 bg-white dark:bg-gray-800 drop-shadow-sm rounded">
