--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -88,7 +88,8 @@
             <a
               href="/{{ $.RepoInfo.FullName }}/issues/{{ .IssueId }}"
               class="text-gray-500 dark:text-gray-400">
-              {{ .Metadata.CommentCount }} comment{{ $s }}
+              {{ .Metadata.CommentCount }}
+              comment{{ $s }}
             </a>
           </span>
         </p>
