--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -252,7 +252,8 @@
         class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700"
         hx-boost="true"
         onclick="window.location.href = window.location.pathname + '?page={{ add .Page 1 }}'">
-        next {{ i "chevron-right" "w-4 h-4" }}
+        next
+        {{ i "chevron-right" "w-4 h-4" }}
       </a>
     {{ end }}
   </div>
