--- a/appview/pages/templates/settings.html
+++ b/appview/pages/templates/settings.html
@@ -51,7 +51,8 @@
               <p class="font-bold dark:text-white">{{ .Name }}</p>
             </div>
             <p class="text-sm text-gray-500 dark:text-gray-400">
-              added {{ template "repo/fragments/time" .Created }}
+              added
+              {{ template "repo/fragments/time" .Created }}
             </p>
             <div class="overflow-x-auto whitespace-nowrap flex-1 max-w-full">
               <code class="text-sm text-gray-500 dark:text-gray-400">
@@ -143,7 +144,8 @@
               </div>
             </div>
             <p class="text-sm text-gray-500 dark:text-gray-400">
-              added {{ template "repo/fragments/time" .CreatedAt }}
+              added
+              {{ template "repo/fragments/time" .CreatedAt }}
             </p>
           </div>
           <div class="flex gap-2 items-center">
