--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -1,5 +1,6 @@
 {{ define "title" }}
-  commit {{ .Diff.Commit.This }} &middot; {{ .RepoInfo.FullName }}
+  commit {{ .Diff.Commit.This }} &middot;
+  {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "extrameta" }}
