--- a/appview/pages/templates/repo/settings/general.html
+++ b/appview/pages/templates/repo/settings/general.html
@@ -1,5 +1,6 @@
 {{ define "title" }}
-  {{ .Tab }} settings &middot; {{ .RepoInfo.FullName }}
+  {{ .Tab }} settings &middot;
+  {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "repoContent" }}
