--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -1,6 +1,8 @@
 {{ define "title" }}
-  {{ range .BreadCrumbs }}{{ pathUnescape (index . 0) }}/{{ end }} at {{ .Ref }}
-  &middot; {{ .RepoInfo.FullName }}
+  {{ range .BreadCrumbs }}{{ pathUnescape (index . 0) }}/{{ end }} at
+  {{ .Ref }}
+  &middot;
+  {{ .RepoInfo.FullName }}
 {{ end }}
 
 {{ define "extrameta" }}
