--- a/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
@@ -9,7 +9,7 @@
         </div>
         <span class="truncate text-sm text-gray-800 dark:text-gray-200">
           <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
-          {{ .Title }}
+          {{ .Title | description }}
         </span>
       </div>
 
