--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -50,7 +50,7 @@
           <a
             href="/{{ $.RepoInfo.FullName }}/issues/{{ .IssueId }}"
             class="no-underline hover:underline">
-            {{ .Title }}
+            {{ .Title | description }}
             <span class="text-gray-500">#{{ .IssueId }}</span>
           </a>
         </div>
