appview: render markdown in titles, commit messages and descriptions
uses the newly added description filter that only autlinks, and renders
backticks, bold and italics.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -45,7 +45,7 @@
           href="/{{ $.RepoInfo.FullName }}/issues/{{ .IssueId }}"
           class="no-underline hover:underline"
           >
-          {{ .Title }}
+          {{ .Title | description }}
           <span class="text-gray-500">#{{ .IssueId }}</span>
       </a>
     </div>
