--- a/appview/pages/templates/repo/fragments/repoDescription.html
+++ b/appview/pages/templates/repo/fragments/repoDescription.html
@@ -1,7 +1,7 @@
 {{ define "repo/fragments/repoDescription" }}
 <span id="repo-description" class="flex flex-wrap items-center gap-2 text-sm" hx-target="this" hx-swap="outerHTML">
     {{ if .RepoInfo.Description }}
-        {{ .RepoInfo.Description }}
+        {{ .RepoInfo.Description | description }}
     {{ else }}
         <span class="italic">this repo has no description</span>
     {{ end }}
