--- a/appview/pages/templates/repo/pulls/fragments/pullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullHeader.html
@@ -1,7 +1,7 @@
 {{ define "repo/pulls/fragments/pullHeader" }}
 <header class="pb-4">
     <h1 class="text-2xl dark:text-white">
-        {{ .Pull.Title }}
+        {{ .Pull.Title | description }}
         <span class="text-gray-500 dark:text-gray-400">#{{ .Pull.PullId }}</span>
     </h1>
 </header>
