--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -50,7 +50,7 @@
             <div class="px-6 py-4 z-5">
                 <div class="pb-2">
                     <a href="/{{ $.RepoInfo.FullName }}/pulls/{{ .PullId }}" class="dark:text-white">
-                        {{ .Title }}
+                        {{ .Title | description }}
                         <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
                     </a>
                 </div>
