--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -118,7 +118,7 @@
   <div class="flex flex-col gap-4 col-span-1 md:col-span-2">
     {{ template "repo/fragments/diffOpts" .DiffOpts }}
   </div>
-  <div class="sticky top-0 flex-grow max-h-screen">
+  <div class="sticky top-0 flex-grow max-h-screen overflow-y-auto">
     {{ template "repo/fragments/diffChangedFiles" .Diff }}
   </div>
 {{end}}
