--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -139,8 +139,8 @@
     {{ $linkstyle := "no-underline hover:underline dark:text-white" }}
 
     {{ range .Files }}
-      <div class="grid grid-cols-2 gap-4 items-center py-1">
-        <div class="col-span-1">
+      <div class="grid grid-cols-3 gap-4 items-center py-1">
+        <div class="col-span-2">
           {{ $link := printf "/%s/%s/%s/%s" $.RepoInfo.FullName "tree" (urlquery $.Ref) .Name }}
           {{ $icon := "folder" }}
           {{ $iconStyle := "size-4 fill-current" }}
@@ -158,7 +158,7 @@
           </a>
         </div>
 
-        <div class="text-xs col-span-1 text-right">
+        <div class="text-sm col-span-1 text-right">
           {{ with .LastCommit }}
             <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .When }}</a>
           {{ end }}
