--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -54,7 +54,7 @@
 
     {{ range .Files }}
       <div class="grid grid-cols-12 gap-4 items-center py-1">
-        <div class="col-span-6 md:col-span-4">
+        <div class="col-span-8 md:col-span-4">
           {{ $link := printf "/%s/%s/%s/%s/%s" $.RepoInfo.FullName "tree" (urlquery $.Ref) $.TreePath .Name }}
           {{ $icon := "folder" }}
           {{ $iconStyle := "size-4 fill-current" }}
@@ -77,7 +77,7 @@
           {{ end }}
         </div>
 
-        <div class="col-span-6 md:col-span-2 text-right">
+        <div class="col-span-4 md:col-span-2 text-sm text-right">
           {{ with .LastCommit }}
             <a href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash }}" class="text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .When }}</a>
           {{ end }}
