appview/strings: allow extensionless filenames
Signed-off-by: ItsHarper <git-f4cbe@harperandrews.org>

--- a/appview/pages/templates/strings/fragments/form.html
+++ b/appview/pages/templates/strings/fragments/form.html
@@ -13,7 +13,7 @@
         type="text"
         id="filename"
         name="filename"
-        placeholder="Filename with extension"
+        placeholder="Filename"
         required
         value="{{ .String.Filename }}"
         class="md:max-w-64 dark:bg-gray-700 dark:text-white dark:border-gray-600 dark:placeholder-gray-400 px-3 py-2 border rounded"
