--- a/appview/pages/templates/strings/string.html
+++ b/appview/pages/templates/strings/string.html
@@ -35,7 +35,7 @@
             title="Delete string"
             hx-delete="/strings/{{ .String.Did }}/{{ .String.Rkey }}/"
             hx-swap="none"
-            hx-confirm="Are you sure you want to delete the gist `{{ .String.Filename }}`?"
+            hx-confirm="Are you sure you want to delete the string `{{ .String.Filename }}`?"
           >
             {{ i "trash-2" "size-4" }}
             <span class="hidden md:inline">delete</span> 
