appview: show banner for users with read-only knots
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/knots/index.html
+++ b/appview/pages/templates/knots/index.html
@@ -77,7 +77,7 @@
         </button>
       </div>
 
-      <div id="registration-error" class="error dark:text-red-400"></div>
+      <div id="register-error" class="error dark:text-red-400"></div>
     </form>
 
   </section>
