--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -21,6 +21,13 @@
             </div>
         </div>
     </nav>
+    {{ if .LoggedInUser }}
+      <div id="upgrade-banner"
+           hx-get="/knots/upgradeBanner"
+           hx-trigger="load"
+           hx-swap="innerHTML">
+      </div>
+    {{ end }}
 {{ end }}
 
 {{ define "newButton" }}
