--- a/appview/pages/templates/knots/fragments/knotListing.html
+++ b/appview/pages/templates/knots/fragments/knotListing.html
@@ -30,9 +30,18 @@
 {{ define "knotRightSide" }}
   <div id="right-side" class="flex gap-2">
     {{ $style := "px-2 py-1 rounded flex items-center flex-shrink-0 gap-2 text-sm" }}
-    {{ if .Registered }}
-      <span class="bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-200 {{$style}}">{{ i "shield-check" "w-4 h-4" }} verified</span>
+    {{ if .IsRegistered }}
+      <span class="bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-200 {{$style}}">
+        {{ i "shield-check" "w-4 h-4" }} verified
+      </span>
       {{ template "knots/fragments/addMemberModal" . }}
+      {{ block "knotDeleteButton" . }} {{ end }}
+    {{ else if .IsReadOnly }}
+      <span class="bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-200 {{$style}}">
+        {{ i "shield-alert" "w-4 h-4" }} read-only
+      </span>
+      {{ block "knotRetryButton" . }} {{ end }}
+      {{ block "knotDeleteButton" . }} {{ end }}
     {{ else }}
       <span class="bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-200 {{$style}}">
         {{ i "shield-off" "w-4 h-4" }} unverified
