appview,docs: touch up copy text
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/knots/fragments/banner.html
+++ b/appview/pages/templates/knots/fragments/banner.html
@@ -3,7 +3,7 @@
   A knot ({{range $i, $r := .Registrations}}{{if ne $i 0}}, {{end}}{{ $r.Domain }}{{ end }})
   that you administer is presently read-only. Consider upgrading this knot to
   continue creating repositories on it.
-  <a href="https://tangled.sh/@tangled.sh/core/tree/master/docs/migrations">Click to read the upgrade guide</a>.
+  <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/migrations/knot-1.7.0.md">Click to read the upgrade guide</a>.
 </div>
 {{ end }}
 
