appview/pages: rework profile overview page to use tabs model
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/user/fragments/editBio.html
+++ b/appview/pages/templates/user/fragments/editBio.html
@@ -13,7 +13,7 @@
       <label class="m-0 p-0" for="description">bio</label>
       <textarea 
         type="text" 
-        class="py-1 px-1 w-full" 
+        class="p-2 w-full" 
         name="description" 
         rows="3"
         placeholder="write a bio">{{ $description }}</textarea>
